Aggiunta Business Logic
Aggiunto package e refactor delle activity