@@ -4,23 +4,16 @@ import android.content.Intent;
 import android.content.res.Configuration;
 import android.os.Bundle;
 import android.support.design.widget.NavigationView;
-import android.support.v4.app.Fragment;
-import android.support.v4.app.FragmentManager;
-import android.support.v4.app.FragmentTransaction;
-import android.support.v4.view.GravityCompat;
 import android.support.v4.widget.DrawerLayout;
 import android.support.v7.app.ActionBarDrawerToggle;
 import android.support.v7.app.AppCompatActivity;
 import android.support.v7.widget.Toolbar;
 import android.util.Log;
-import android.util.TypedValue;
 import android.view.MenuItem;
 import android.view.View;
-import android.view.Window;
 import android.widget.AdapterView;
 import android.widget.ArrayAdapter;
 import android.widget.Button;
-import android.widget.LinearLayout;
 import android.widget.ListView;
 import android.widget.TextView;
 import android.widget.Toast;
@@ -30,59 +23,52 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
-import entity.Corso;
-import entity.UtenteRegistrato;
+import business.ControllerUtente;
 import paovalle.uninacampus.R;
 
 public class HomePage extends AppCompatActivity {
     private DrawerLayout mDrawer;
     private Toolbar toolbar;
-    private NavigationView nvDrawer;
     private ActionBarDrawerToggle drawerToggle;
-    private UtenteRegistrato user;
-    //la usero per ricavare l'id del corso selezionato
-    LinkedList<String> idCorsiSeguiti = new LinkedList<>();
-    int item_selected = -1;
 
-    private Button recBtn;
-    private Button mailBtn;
+    //la usero per ricavare l'id del corso selezionato
+    List idCorsiSeguiti = new LinkedList<>();
+
+    ControllerUtente cUser;
+    int item_selected = -1;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_home_page);
 
-        //setting up user data
-        Intent i = getIntent();
-        user = UtenteRegistrato.getIstanza();
-        ((TextView)findViewById(R.id.textFName)).setText(user.getNome());
-        ((TextView)findViewById(R.id.textLName)).setText(user.getCognome());
-        ((TextView)findViewById(R.id.textMean)).setText(new Double(user.getMedia()).toString());
-        ((TextView)findViewById(R.id.textCDL)).setText(user.getCorso().getNome());
+        cUser = ControllerUtente.getInstance();
+
+        //setting up current user infos
+        ((TextView)findViewById(R.id.textFName)).setText(cUser.getCurrentUser().getNome());
+        ((TextView)findViewById(R.id.textLName)).setText(cUser.getCurrentUser().getCognome());
+        ((TextView)findViewById(R.id.textMean)).setText(Double.valueOf(cUser.getCurrentUser().getMedia()).toString());
+        ((TextView)findViewById(R.id.textCDL)).setText(cUser.getCurrentUser().getCorso().getNome());
 
         // Set a Toolbar to replace the ActionBar.
-        toolbar = (Toolbar) findViewById(R.id.toolbar);
-        setSupportActionBar(toolbar);
-
-        // Set a Toolbar to replace the ActionBar.
-                toolbar = (Toolbar) findViewById(R.id.toolbar);
+        toolbar = findViewById(R.id.toolbar);
         setSupportActionBar(toolbar);
 
         // Find our drawer view
-        mDrawer = (DrawerLayout) findViewById(R.id.drawer_layout);
+        mDrawer = findViewById(R.id.drawer_layout);
          drawerToggle = setupDrawerToggle();
         // Tie DrawerLayout events to the ActionBarToggle
         mDrawer.addDrawerListener(drawerToggle);
 
         // Find our drawer view
-        nvDrawer = (NavigationView) findViewById(R.id.nvView);
+        NavigationView nvDrawer = findViewById(R.id.nvView);
         // Setup drawer view
         setupDrawerContent(nvDrawer);
 
         //if not null, this will turn menu icon to grey
         ((NavigationView)findViewById(R.id.nvView)).setItemIconTintList(null);
 
-        recBtn = (Button) findViewById(R.id.recorderBtn);
+        Button recBtn = findViewById(R.id.recorderBtn);
         recBtn.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
@@ -90,7 +76,7 @@ public class HomePage extends AppCompatActivity {
             }
         });
 
-        mailBtn = (Button) findViewById(R.id.mailBtn);
+        Button mailBtn = findViewById(R.id.mailBtn);
         mailBtn.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
@@ -104,17 +90,11 @@ public class HomePage extends AppCompatActivity {
     public void onResume() {
         super.onResume();
         //mostro elenco corsi seguiti
-        ListView lv = (ListView) findViewById(R.id.elencoCorsiSeguiti);
+        ListView lv = findViewById(R.id.elencoCorsiSeguiti);
         lv.setAdapter(null);
         List<String> corsi = new LinkedList<>();
-        Iterator it = user.getCorsiScelti().entrySet().iterator();
-        while (it.hasNext()) {
-            Map.Entry pair = (Map.Entry) it.next();
-            corsi.add(((Corso) pair.getValue()).getNome());
-            idCorsiSeguiti.add((String)pair.getKey());
-            it.remove(); // avoids a ConcurrentModificationException
-        }
-        System.out.println("RESUMED!");
+        corsi = cUser.getListCorsiSeguitiCurrentUser();
+        idCorsiSeguiti = cUser.getListIdCorsiSeguitiCurrentUser();
 
         ArrayAdapter<String> adapter=new ArrayAdapter<String>(this, R.layout.row,corsi);
         lv.setAdapter(adapter);
@@ -125,7 +105,8 @@ public class HomePage extends AppCompatActivity {
             @Override
             public void onItemClick(AdapterView<?> adapterView, View view, int i, long l) {
                 item_selected = i;
-                System.out.println(i);
+                System.out.println("selected=>"+i);
+                Log.w("selected", Integer.valueOf(i).toString());
             }
         });
     }
@@ -133,10 +114,7 @@ public class HomePage extends AppCompatActivity {
 
     @Override
     public boolean onOptionsItemSelected(MenuItem item) {
-        if (drawerToggle.onOptionsItemSelected(item)) {
-            return true;
-        }
-        return super.onOptionsItemSelected(item);
+        return drawerToggle.onOptionsItemSelected(item) || super.onOptionsItemSelected(item);
     }
 
     private void setupDrawerContent(NavigationView navigationView) {
@@ -163,12 +141,10 @@ public class HomePage extends AppCompatActivity {
 
                 break;
             case R.id.nav_fifth_fragment:
-                Log.d("prova","Sto clickando msg" );
-                goToMailDirect();
+                goToMail();
                 break;
             case R.id.nav_sixth_fragment:
-                Log.d("prova","HocliccatoLibrettooooo" );
-                vediLibretto();
+                goToLibretto();
                 break;
 
             default:
@@ -184,35 +160,23 @@ public class HomePage extends AppCompatActivity {
     }
 
     private void goToMail(){
-        ///prendo corso selezionato
-        String sel = (String)((ListView)findViewById(R.id.elencoCorsiSeguiti)).getSelectedItem();
-        System.out.println(sel);
-        if (item_selected==-1) {
-            Toast.makeText(getApplicationContext(), "Selezionare prima un corso!", Toast.LENGTH_SHORT).show();
-        } else {
-            System.out.println("Hai cliccato su: " + idCorsiSeguiti.get(item_selected));
-            Intent intent = new Intent(this, MailProf.class);
-            startActivity(intent);
-        }
+        //se item non selezionato, sel="" altrimenti sara il codice del corso
+        System.out.println("Gli passero => " +idCorsiSeguiti.get(item_selected) );
+        Intent intent = new Intent(this, MailProf.class);
+        intent.putExtra("IDCORSO", (String)idCorsiSeguiti.get(item_selected));
+        startActivity(intent);
 
-    }
-
-    private void goToMailDirect(){
-
-            Intent intent = new Intent(this, MailProf.class);
-            startActivity(intent);
     }
 
     private void goToRecorder(){
         //TODO: PAOLO DEVE FARE LA LOGICA!!!!
-        /*Intent intent = new Intent(this,RecorderActivity.class);
-        startActivity(intent);*/
+        Intent intent = new Intent(this,RecorderActivity.class);
+        startActivity(intent);
 
     }
 
-    private void vediLibretto(){
+    private void goToLibretto(){
         //TODO: PAOLO DEVE FARE LA LOGICA!!!!
-        Log.d("prova","Sono nella funzione" );
         Intent intent = new Intent(this,LibrettoActivity.class);
         startActivity(intent);
 
